syntax = "proto3";

package tests.message;

import "patch/go.proto";

option go_package = "github.com/sudhiaithal/protopatch/tests/message";

message MessageWithTags {
	string value = 1 [(go.field).tags = 'test:"value"'];
}

message OuterMessageWithTags {
	message InnerMessage {
		string value = 1 [(go.field).tags = 'test:"value"'];
	}
}

message MessageWithJSONTags {
	string value = 1 [(go.field).tags = 'json:"custom_value"'];
	string empty = 2 [(go.field).tags = 'json:"custom_empty,omitempty"'];
}

message MessageWithRedundantTags {
	string value = 1 [(go.field).tags = 'test:"1" test:"2" test:"3"'];
}
